Added an icon for the webpage

--- a/src/main/webapp/search.html
+++ b/src/main/webapp/search.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Coin Search Engine</title>
         <link type="text/css" href="css/search.css" rel="stylesheet"/>
+         <link rel="icon" type="image/ico" href="favicon.ico"/>
     </head>
 
     <body>
